changed the text color in display to black ma nigga. Tmr i'll fix and align the dark mode btn to the center

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
   -ms-flex-align: center;
   align-items: center;
   background: #bdbdbd;
-  color: #f5f5f5;
+  color: black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -106,11 +106,6 @@ body {
   transition: all 0.2s ease;
 }
 /*!DarkMode BTN!*/
-.dark-mode-custom {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 .dark-btn {
   width: 50px;
   height: 50px;
